--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,6 +1,7 @@
+@import '../../var';
 .btn {
 	border-radius: 5px;
-	background: #f9b300;
+	background-color: $main-color;
 	color: #fff;
 	font-size: 30px;
 	font-weight: 700;
