--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,6 +1,19 @@
+@import '../../var';
 .header {
 	min-height: 965px;
-	background-image: url('../../assets/decor/yellow.svg');
-	background-repeat: no-repeat;
-	background-position: right -736px top -319px;
+	// background-image: url('../../assets/decor/yellow.svg');
+	// background-repeat: no-repeat;
+	// background-position: right -736px top -319px;
+	&__inner {
+		position: relative;
+	}
+}
+.decor {
+	position: absolute;
+	top: -319px;
+	right: -736px;
+	z-index: -1;
+	path {
+		fill: $main-color;
+	}
 }
