--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -1,6 +1,18 @@
 @import '../../var';
+
 .menu {
+	position: sticky;
+	top: 0;
+	z-index: 50;
+	&__search {
+		background-color: #fff;
+		box-shadow: 0px 5px 20px 0px rgba(157, 157, 157, 0.25);
+	}
+}
+.nav {
 	padding-top: 43px;
+	padding-bottom: 55px;
+
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
