--- a/src/components/InputSearch/InputSearch.module.scss
+++ b/src/components/InputSearch/InputSearch.module.scss
@@ -1,23 +1,64 @@
+.search {
+	background-color: #fff;
+	border-radius: 30px;
+	position: relative;
+}
 .icon__search {
 	position: absolute;
 	top: 14px;
 	left: 30px;
 }
+
 .input {
 	border-radius: 30px;
-	background: #fff;
-	box-shadow: 0px 0px 20px 0px rgba(157, 157, 157, 0.25);
 	border: none;
 	width: 100%;
 	color: black;
 	font-size: 20px;
-	font-style: normal;
 	font-weight: 500;
 	line-height: 130%; /* 26px */
 	padding: 16px;
 	padding-left: 82px;
 	outline: none;
+	box-shadow: 0px 0px 20px 0px rgba(157, 157, 157, 0.25);
+
 	&::placeholder {
+		color: #c4c4c4;
+	}
+	&__result {
+		border-bottom-left-radius: 0px;
+		border-bottom-right-radius: 0px;
+		border-bottom: 1px solid #e9e9e9;
+	}
+}
+.result {
+	width: 100%;
+	color: #000;
+	background-color: #fff;
+	border-bottom-left-radius: 30px;
+	border-bottom-right-radius: 30px;
+
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 130%; /* 26px */
+	position: absolute;
+	box-shadow: 0px 20px 20px 0px rgba(157, 157, 157, 0.25);
+	&__item {
+		// height: 46px;
+		padding: 10px;
+		padding-left: 82px;
+		&:hover {
+			background-color: #fcfcfc;
+		}
+		&:last-child {
+			border-bottom-left-radius: 30px;
+			border-bottom-right-radius: 30px;
+		}
+	}
+	&__nofind {
+		padding: 10px;
+		padding-left: 82px;
 		color: #c4c4c4;
 	}
 }
