--- a/src/components/SliderItem/SliderItem.module.scss
+++ b/src/components/SliderItem/SliderItem.module.scss
@@ -1,5 +1,4 @@
 .title {
-	margin-top: 120px;
 	margin-bottom: 60px;
 	font-size: 80px;
 	font-weight: 900;
@@ -14,12 +13,13 @@
 	}
 }
 .slider__item {
+	min-height: 850px;
+	padding-top: 116px;
 	position: relative;
-	padding-bottom: 100px;
 }
 .img {
 	position: absolute;
-	top: -105px;
+	top: 28px;
 	right: 89px;
 }
 :global {
@@ -28,7 +28,7 @@
 	}
 	.swiper-pagination {
 		position: absolute;
-		top: 50px !important;
+		top: 66px !important;
 		bottom: auto !important;
 		right: 0 !important;
 		width: auto !important;
