--- a/src/section/Catalog/Catalog.module.scss
+++ b/src/section/Catalog/Catalog.module.scss
@@ -2,6 +2,7 @@
 
 .catalog {
 	position: relative;
+	padding-bottom: 90px;
 	&::after {
 		content: url('../../assets/images/catalog/beans.png');
 		position: absolute;
