--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,9 +12,16 @@
 		background: #e2a300;
 	}
 }
-.small {
+.card__catalog {
 	width: 100%;
 	padding-top: 15px;
 	padding-bottom: 15px;
 	font-size: 25px;
+}
+.card__discound {
+	width: 152px;
+	height: 23px;
+	font-size: 18px;
+	padding: 13px;
+	margin: 0px -3px -5px 0;
 }
