--- a/src/section/Discount/Discount.module.scss
+++ b/src/section/Discount/Discount.module.scss
@@ -1,9 +1,4 @@
-.discount {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	gap: 50px;
-}
+@import '../../var';
 .text {
 	color: #000;
 	text-align: right;
@@ -13,4 +8,70 @@
 	font-weight: 500;
 	line-height: 130%; /* 32.5px */
 	max-width: 1107px;
+	margin-bottom: 80px;
+	text-align: end;
+}
+
+.cards {
+	text-align: start;
+
+	margin-left: 275px;
+	margin-right: 125px;
+	margin-bottom: 42px;
+	position: relative;
+}
+.discount {
+	text-align: end;
+	.title {
+		margin: -1px -8px 0 0;
+	}
+	.text {
+		text-align: end;
+		margin: 50px 0 44px auto;
+	}
+}
+
+.prev,
+.next {
+	height: 70px;
+	width: 70px;
+	background-color: $main-color;
+	border-radius: 50%;
+	position: absolute;
+	right: 10px;
+}
+.prev {
+	top: 299px;
+	left: -127px;
+	&::after {
+		content: url('../../assets/icon/arrow-left.svg');
+		position: absolute;
+		top: 27px;
+		left: 21.5px;
+	}
+}
+.next {
+	top: 310px;
+	right: -133px;
+	&::after {
+		content: url('../../assets/icon/arrow-right.svg');
+		position: absolute;
+		top: 27px;
+		left: 20px;
+	}
+}
+
+.more {
+	display: inline;
+	font-size: 20px;
+	font-weight: 500;
+	text-decoration-line: underline;
+	margin-right: 103px;
+	padding: 10px 29px 11px 32px;
+
+	&:hover {
+		border-radius: 30px;
+		background: #f9f9f9;
+		color: #f9b300;
+	}
 }
