--- a/src/section/Roasting/Roasting.module.scss
+++ b/src/section/Roasting/Roasting.module.scss
@@ -9,6 +9,7 @@
 		/* background-size: cover; */
 		background-repeat: no-repeat;
 		background-position-y: -547px;
+		background-position-x: center;
 		width: 100%;
 		height: 130%;
 		top: -195px;
