--- a/src/section/News/News.module.scss
+++ b/src/section/News/News.module.scss
@@ -6,6 +6,7 @@
 
 .news {
 	position: relative;
+	padding-bottom: 99px;
 
 	&__top {
 		display: flex;
@@ -18,7 +19,7 @@
 		position: absolute;
 		background-image: url(../../assets/images/news/bg.svg);
 		background-repeat: no-repeat;
-		// background-position-y: -547px;
+		background-position-x: center;
 		width: 100%;
 		height: 100%;
 		top: 114px;
