--- a/src/components/CardNews/CardNews.module.scss
+++ b/src/components/CardNews/CardNews.module.scss
@@ -48,9 +48,20 @@
 				border-radius: 30px;
 				background: #f9f9f9;
 			}
+			position: relative;
+
 			&::after {
-				content: url('../../assets/icon/arrow-right-yellow.svg');
-				padding-left: 10px;
+				content: '';
+				mask: url('../../assets/icon/arrow-right-yellow.svg');
+				mask-repeat: no-repeat;
+
+				background-color: $main-color;
+
+				position: absolute;
+				top: 18px;
+				right: 3px;
+				height: 12px;
+				width: 15px;
 			}
 		}
 	}
