--- a/src/section/News/News.module.scss
+++ b/src/section/News/News.module.scss
@@ -21,7 +21,7 @@
 		background-repeat: no-repeat;
 		background-position-x: center;
 		width: 100%;
-		height: 100%;
+		height: 130%;
 		top: 114px;
 		z-index: -2;
 	}
@@ -34,11 +34,15 @@
 
 .more {
 	display: inline;
-	font-size: 20px;
+
 	font-weight: 500;
 	text-decoration-line: underline;
-	margin-right: 103px;
+	margin-right: -36px;
+	margin-bottom: -15px;
 	padding: 10px 29px 11px 32px;
+	font-size: 25px;
+	font-style: normal;
+	line-height: 130%; /* 32.5px */
 
 	&:hover {
 		border-radius: 30px;
