--- a/src/components/CardDiscound/CardDiscound.module.scss
+++ b/src/components/CardDiscound/CardDiscound.module.scss
@@ -4,12 +4,27 @@
 	margin: 35px 15px 20px;
 }
 .card {
-	padding: 0px 38px 50px;
 	border-radius: 20px;
 	background: #fff;
 	box-shadow: 0px 0px 20px 0px rgba(146, 146, 146, 0.25);
-	padding: 25px 37px 50px;
+	padding: 20px 30px 50px 37px;
+	&__top {
+		display: flex;
+		justify-content: space-between;
+		&_inner {
+			display: flex;
+			flex-direction: column;
+			gap: 17px;
+		}
+	}
+	&__bottom {
+		display: flex;
+		justify-content: space-between;
+		gap: 20px;
+		align-items: flex-end;
+	}
 }
+
 .circle {
 	width: 70px;
 	height: 70px;
@@ -20,34 +35,13 @@
 	align-items: center;
 	font-size: 35px;
 	font-weight: 700;
-	margin-top: -60px;
+	margin-top: -56px;
 }
-.card__top {
-	display: flex;
-	justify-content: space-between;
-	&_inner {
-		display: flex;
-		flex-direction: column;
-		gap: 17px;
-	}
-}
+
 .discound {
 	color: $main-color;
 	font-size: 18px;
 	font-weight: 700;
-}
-.selector {
-	border-radius: 5px;
-	border: 1px solid $main-color;
-	background: #fff7e1;
-	width: 132px;
-	height: 33px;
-	outline: none;
-	color: #000;
-	text-align: center;
-	font-size: 18px;
-	font-weight: 500;
-	// appearance: none;
 }
 
 .stats {
@@ -93,23 +87,20 @@
 		padding-bottom: 4px;
 	}
 }
+
 .title {
 	font-size: 25px;
 	font-weight: 900;
 	padding-bottom: 10px;
 }
+
 .desc {
 	font-size: 18px;
 	font-weight: 500;
 	max-width: 269px;
 	padding-bottom: 6px;
 }
-.card__bottom {
-	display: flex;
-	justify-content: space-between;
-	gap: 20px;
-	align-items: flex-end;
-}
+
 .price {
 	min-width: 90px;
 	&__old {
@@ -125,6 +116,7 @@
 		line-height: 37px;
 	}
 }
+
 button {
 	margin-right: 7px;
 	margin-bottom: -5px;
