--- a/src/section/News/News.module.scss
+++ b/src/section/News/News.module.scss
@@ -32,21 +32,6 @@
 	gap: 20px;
 }
 
-.more {
-	display: inline;
-
-	font-weight: 500;
-	text-decoration-line: underline;
-	margin-right: -36px;
-	margin-bottom: -15px;
-	padding: 10px 29px 11px 32px;
+.seeall {
 	font-size: 25px;
-	font-style: normal;
-	line-height: 130%; /* 32.5px */
-
-	&:hover {
-		border-radius: 30px;
-		background: #f9f9f9;
-		color: $main-color;
-	}
 }
