--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -5,6 +5,7 @@
 	background: #fcfcfc;
 	width: 680px;
 	padding: 23px 60px;
+	outline: none;
 	&::placeholder {
 		color: #c4c4c4;
 		font-size: 20px;
@@ -22,6 +23,11 @@
 	p {
 		position: absolute;
 		right: 0;
+		color: $main-color;
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 500;
+		line-height: normal;
 	}
 	.display__none {
 		display: none;
