--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -6,6 +6,13 @@
 	width: 680px;
 	padding: 23px 60px;
 	outline: none;
+	color: #000;
+
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+
 	&::placeholder {
 		color: #c4c4c4;
 		font-size: 20px;
@@ -18,7 +25,7 @@
 	font-weight: 500;
 
 	text-align: end;
-	margin-top: 5px;
+	// margin-top: 5px;
 	position: relative;
 	p {
 		position: absolute;
@@ -31,5 +38,13 @@
 	}
 	.display__none {
 		display: none;
+	}
+	.view__password {
+		position: absolute;
+		top: 22px;
+		right: 22px;
+		padding: 5px;
+		width: 32px;
+		height: 26px;
 	}
 }
