--- a/src/layout/Modal/Modal.module.scss
+++ b/src/layout/Modal/Modal.module.scss
@@ -11,7 +11,8 @@
 	justify-content: center;
 	align-items: center;
 }
-.register {
+
+.modal {
 	margin: 0 auto;
 
 	width: 1380px;
@@ -70,8 +71,11 @@
 			font-weight: 500;
 			line-height: normal;
 			width: 100%;
-			background-color: transparent;
+			background-color: $main-color;
 			padding: 20px;
+			&:hover {
+				background-color: rgba(3, 3, 3, 0.1);
+			}
 		}
 	}
 
@@ -83,35 +87,15 @@
 		text-align: center;
 		display: flex;
 		flex-direction: column;
-		// justify-content: center;
+		justify-content: center;
 		gap: 20px;
 		align-items: center;
 		img {
 			width: 145px;
 			height: 39px;
 			display: inline;
-			margin-bottom: 17px;
 		}
-		h3 {
-			color: #000;
 
-			font-size: 40px;
-			font-style: normal;
-			font-weight: 900;
-			line-height: normal;
-
-			margin-top: -3px;
-		}
-		.p {
-			color: #000;
-			text-align: center;
-
-			font-size: 20px;
-			font-style: normal;
-			font-weight: 500;
-			line-height: normal;
-			margin-bottom: 10px;
-		}
 		button {
 			color: #fff;
 			font-family: Gilroy;
@@ -126,6 +110,16 @@
 			width: 100%;
 			margin: 0;
 			margin-top: 10px;
+			&:hover {
+				opacity: 0.9;
+			}
+		}
+		a {
+			color: #000;
+			align-self: flex-end;
+			font-size: 20px;
+			font-weight: 500;
+			text-decoration-line: underline;
 		}
 	}
 }
