--- a/src/global.scss
+++ b/src/global.scss
@@ -8,9 +8,9 @@ body {
 html {
 	height: 100%;
 }
-// #root {
-// 	height: 100%;
-// }
+#root {
+	height: max-content;
+}
 body {
 	font-family: 'Gilroy', sans-serif;
 	font-weight: 500;
