--- a/src/components/InputCustomRadio/InputCustomRadio.module.scss
+++ b/src/components/InputCustomRadio/InputCustomRadio.module.scss
@@ -6,6 +6,10 @@
 
 .radiobutton-label {
 	cursor: pointer;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
 }
 
 .custom-radiobutton {
