--- a/src/section/SortMenu/SortMenu.module.scss
+++ b/src/section/SortMenu/SortMenu.module.scss
@@ -90,6 +90,7 @@
 
 		gap: 20px;
 		margin-top: 20px;
+		padding-bottom: 81px;
 	}
 
 	.line--left {
@@ -107,5 +108,8 @@
 		border-radius: 10px;
 		background-color: $main-color;
 		margin-bottom: 28px;
+	}
+	.link {
+		margin-bottom: 23px;
 	}
 }
