--- a/src/section/SortMenuOther/SortMenuOther.module.scss
+++ b/src/section/SortMenuOther/SortMenuOther.module.scss
@@ -5,15 +5,14 @@
 	gap: 20px;
 
 	.card {
+		flex-basis: calc(25% - 20px);
 		font-size: 25px;
 		font-weight: 700;
-		font-style: normal;
-		line-height: normal;
 
 		display: flex;
 		align-items: center;
 		flex-direction: column;
-		justify-content: space-between;
+		// justify-content: space-between;
 
 		width: 400px;
 		height: 320px;
