--- a/src/components/CardCoffe/CardCoffe.module.scss
+++ b/src/components/CardCoffe/CardCoffe.module.scss
@@ -8,6 +8,7 @@
 	background: #fff;
 	box-shadow: 0px 0px 20px 0px rgba(146, 146, 146, 0.25);
 	padding: 20px 30px 50px 37px;
+
 	&__top {
 		display: flex;
 		justify-content: space-between;
@@ -95,6 +96,7 @@
 	font-size: 25px;
 	font-weight: 900;
 	padding-bottom: 10px;
+	color: black;
 }
 
 .desc {
@@ -102,6 +104,7 @@
 	font-weight: 500;
 	max-width: 269px;
 	padding-bottom: 6px;
+	color: black;
 }
 
 .price {
