--- a/src/section/Reviews/Reviews.module.scss
+++ b/src/section/Reviews/Reviews.module.scss
@@ -1,62 +1,77 @@
 @import '../../var';
-.reviews {
-	// &::before {
-	// 	background-image: url(../../assets/images/product/bg-reviews.svg);
-	// 	background-repeat: no-repeat;
-	// 	background-position-y: -50px;
-	// 	height: 100%;
-	// 	width: 100%;
-	// }
-	position: relative;
-	&::before {
-		content: '';
-		background-image: url(../../assets/images/product/bg-reviews.svg);
-		background-position-y: -50px;
-		background-size: cover;
-		// height: calc(100% + 230px);
-		height: 105%;
-		width: 100%;
-		// display: block;
-		position: absolute;
-		z-index: -2;
-		// top: -200px;
-	}
-	&::after {
-		content: '';
-		background-image: url(../../assets/images/catalog-page/decor-bg-footer.svg);
-		mask: url(../../assets/images/catalog-page/mask.svg);
-		mask-repeat: no-repeat;
-		background-color: $main-color;
 
-		background-repeat: no-repeat;
-		height: 300px;
-		width: 100%;
-		display: block;
+.reviews {
+	position: relative;
+	z-index: -2;
+
+	background-color: #f5f5f5;
+
+	&::before {
 		position: absolute;
-		bottom: -290px;
 		z-index: -1;
+		top: -1px;
+
+		width: 100%;
+		height: 100%;
+
+		content: '';
+
+		background-image: url(../../assets/images/product/bg-top.svg);
+		background-repeat: no-repeat;
+		background-position-x: center;
+	}
+
+	&::after {
+		position: absolute;
+		z-index: -1;
+		bottom: -283px;
+
+		display: block;
+
+		width: 100%;
+		height: 300px;
+
+		content: '';
+
+		background-color: $main-color;
+		background-image: url(../../assets/images/catalog-page/decor-bg-footer.svg);
+		background-repeat: no-repeat;
+		background-position-x: center;
+
+		mask: url(../../assets/images/catalog-page/mask.svg);
+		mask-position: center;
+		mask-repeat: no-repeat;
 	}
 }
+
 .title {
-	color: #000;
 	font-family: Gilroy;
 	font-size: 40px;
-	font-style: normal;
 	font-weight: 900;
+	font-style: normal;
 	line-height: normal;
+
 	margin-bottom: 30px;
+
+	color: #000;
 }
+
 .inner {
 	display: flex;
 	flex-direction: column;
+
 	gap: 70px;
 }
+
 .button {
 	font-size: 20px;
-	padding: 23px;
-	border-radius: 10px;
-	border: 1px solid #e4e4e4;
-	background: #fff;
+
 	margin-top: -20px;
+	margin-right: 0px;
 	margin-bottom: 102px;
+	padding: 23px;
+
+	border: 1px solid #e4e4e4;
+	border-radius: 10px;
+	background: #fff;
 }
