--- a/src/section/CardProductBig/CardProductBig.module.scss
+++ b/src/section/CardProductBig/CardProductBig.module.scss
@@ -28,19 +28,23 @@
 	margin-top: 40px;
 	display: flex;
 	gap: 152px;
-
+	align-items: center;
 	font-size: 20px;
 	font-weight: 500;
 
 	.img {
 		position: relative;
 		width: fit-content;
-		height: 767px;
+		max-height: 767px;
 
 		.internal {
 			position: absolute;
 			top: 70px;
 			right: -21px;
+			&__bottom {
+				bottom: 73px;
+				top: auto;
+			}
 		}
 	}
 	.info {
@@ -111,8 +115,8 @@
 		}
 		.sort {
 			flex-direction: row;
-			margin-left: -61px;
-			gap: 61px;
+			justify-content: flex-start;
+			gap: 20px;
 			margin-bottom: 67px;
 		}
 
