--- a/src/section/CardProductBig/CardProductBig.module.scss
+++ b/src/section/CardProductBig/CardProductBig.module.scss
@@ -34,13 +34,21 @@
 
 	.img {
 		position: relative;
-		width: fit-content;
-		max-height: 767px;
-
+		width: 500px;
+		height: 767px;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
 		.internal {
 			position: absolute;
 			top: 70px;
 			right: -21px;
+			height: 200px;
+			width: 200px;
+			border-radius: 50%;
+			object-fit: cover;
 			&__bottom {
 				bottom: 73px;
 				top: auto;
