--- a/src/components/WaysAll/WaysAll.module.scss
+++ b/src/components/WaysAll/WaysAll.module.scss
@@ -1,4 +1,50 @@
 .cards {
-	display: flex;
-	gap: 21px;
+	ul {
+		display: flex;
+		gap: 21px;
+	}
+	.title {
+		color: #000;
+
+		font-size: 40px;
+		font-style: normal;
+		font-weight: 900;
+		line-height: normal;
+		margin-top: 110px;
+		margin-bottom: 60px;
+		&__second {
+			color: #000;
+
+			font-size: 30px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: normal;
+			margin-bottom: 60px;
+		}
+	}
+	.text {
+		max-width: 1380px;
+		color: #222;
+		font-family: Gilroy;
+		font-size: 25px;
+		font-style: normal;
+		font-weight: 500;
+		line-height: 130%; /* 32.5px */
+		margin-bottom: 70px;
+	}
+	.img {
+		width: 1660px;
+		height: 550px;
+		border-radius: 20px;
+		margin-bottom: 60px;
+	}
+}
+:global {
+	.react-tabs__tab--selected div {
+		background: #f9b300;
+		color: #fff;
+		path {
+			fill: #fff;
+		}
+	}
 }
