--- a/src/components/InputNr/InputNr.module.scss
+++ b/src/components/InputNr/InputNr.module.scss
@@ -13,6 +13,7 @@
 	font-weight: 600;
 	line-height: normal;
 	align-items: center;
+
 	.minus,
 	.plus {
 		min-height: 70px;
@@ -26,5 +27,18 @@
 	}
 	.disabled {
 		color: #c9c9c9;
+	}
+}
+.small {
+	width: 171px;
+	height: 50px;
+	border-radius: 5px;
+	font-size: 21px;
+	.minus,
+	.plus {
+		min-height: 50px;
+		width: 50px;
+
+		font-size: 25px;
 	}
 }
