--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -24,7 +24,7 @@
 	font-size: 16px;
 	font-weight: 500;
 
-	text-align: end;
+	// text-align: end;
 	// margin-top: 5px;
 	position: relative;
 	p {
