--- a/src/section/CardCart/CardCart.module.scss
+++ b/src/section/CardCart/CardCart.module.scss
@@ -1,10 +1,32 @@
 @import '../../var';
 
 .cart_cart {
-	background-color: #fff7e1;
-
+	// background-color: #fff7e1;
+	padding-bottom: 30px;
+	position: relative;
+	&::after {
+		background-image: url(../../assets/images/cart/cart_bg.svg);
+		content: '';
+		background-repeat: no-repeat;
+		background-position-x: center;
+		background-position-y: bottom;
+		// background-size: contain;
+		display: block;
+		bottom: -211px;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		z-index: -1;
+	}
+	&::before {
+		background-color: #fff7e1;
+		content: '';
+		position: absolute;
+		height: 92%;
+		width: 100%;
+		z-index: -1;
+	}
 	.inner {
-		margin: 0 10px;
 		padding: 110px 113px 86px 137px;
 		border-radius: 20px;
 		border: 1px solid #e4e4e4;
