--- a/src/components/ProductClasificationBtn/ProductClasificationBtn.module.scss
+++ b/src/components/ProductClasificationBtn/ProductClasificationBtn.module.scss
@@ -1,3 +1,4 @@
+@import '../../var';
 .buttons {
 	display: flex;
 	justify-content: space-between;
@@ -9,7 +10,7 @@
 		border-radius: 5px;
 		border: 1px solid #c9c9c9;
 		background: #f6f6f6;
-		color: #f9b300;
+		color: $main-color;
 		text-align: center;
 
 		font-size: 25px;
@@ -19,7 +20,7 @@
 		width: 100%;
 	}
 	.active {
-		border: 1px solid #f9b300;
+		border: 1px solid $main-color;
 		background: #fff7e1;
 	}
 }
