--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -35,7 +35,7 @@
 		padding: 10px 30px;
 		margin-top: 8px;
 		border-radius: 5px;
-		border: 1px solid #f9b300;
+		border: 1px solid $main-color;
 		background: #fff7e1;
 		font-size: 18px;
 		font-weight: 500;
@@ -56,7 +56,7 @@
 			gap: 10px;
 			flex-direction: column;
 			li:hover {
-				color: #f9b300;
+				color: $main-color;
 			}
 		}
 	}
