--- a/src/section/CardProductBig/CardProductBig.module.scss
+++ b/src/section/CardProductBig/CardProductBig.module.scss
@@ -1,3 +1,4 @@
+@import '../../var';
 .card__product__big {
 	background-image: url('../../assets/images/product/bg.svg');
 	background-repeat: no-repeat;
@@ -68,7 +69,7 @@
 				margin-bottom: 20px;
 			}
 			.right {
-				color: #f9b300;
+				color: $main-color;
 				font-size: 20px;
 				font-weight: 700;
 				.right__messagefirst {
