--- a/src/section/Delivery/Delivery.module.scss
+++ b/src/section/Delivery/Delivery.module.scss
@@ -25,7 +25,7 @@
 				font-size: 25px;
 				font-weight: 600;
 				border-radius: 5px;
-				border: 1px solid #f9b300;
+				border: 1px solid $main-color;
 				background: #fff7e1;
 				width: 100%;
 			}
