--- a/src/components/InputSearch/InputSearch.module.scss
+++ b/src/components/InputSearch/InputSearch.module.scss
@@ -33,7 +33,7 @@
 }
 .result {
 	width: 100%;
-	color: #000;
+
 	background-color: #fff;
 	border-bottom-left-radius: 30px;
 	border-bottom-right-radius: 30px;
@@ -61,5 +61,18 @@
 		padding: 10px;
 		padding-left: 82px;
 		color: #c4c4c4;
+	}
+}
+@media (max-width: 1691px) {
+	.input {
+		font-size: 16px;
+		padding: 10px;
+		padding-left: 72px;
+	}
+	.icon__search {
+		top: 10px;
+		left: 30px;
+		width: 22px;
+		height: 22px;
 	}
 }
