--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -2,32 +2,40 @@
 
 .menu {
 	position: sticky;
-	top: 0;
-	background-color: #fff;
 	z-index: 50;
+	top: 0;
+
+	background-color: #fff;
+
 	&__search {
 		background-color: #fff;
 		box-shadow: 0px 5px 20px 0px rgba(157, 157, 157, 0.25);
 	}
 }
+
 .nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
 	padding-top: 43px;
 	padding-bottom: 55px;
 
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	&__list {
 		display: flex;
-		gap: 100px;
 		align-self: flex-end;
+
+		gap: 100px;
 	}
+
 	&__link {
-		color: black;
-		font-size: 25px;
 		display: inline-block;
-		border-bottom: 3px solid transparent;
+
 		padding-bottom: 4px;
+
+		color: black;
+		border-bottom: 3px solid transparent;
+
 		&:hover {
 			border-bottom: 3px solid $main-color;
 		}
@@ -37,20 +45,44 @@
 .active {
 	border-bottom: 3px solid $main-color;
 }
+
 .cart {
 	display: flex;
+
 	gap: 53px;
-	// align-self: center;
 }
+
 .input__inner {
-	display: none; // width: 100%;
-	flex-grow: 1;
 	position: relative;
+
+	display: none;
+	flex-grow: 1;
 }
 
 .visible {
 	display: block;
 }
+
 .invisible {
 	display: none;
+}
+
+@media (max-width: 1691px) {
+	.logo {
+		width: 179px;
+	}
+	.nav {
+		padding-top: 34px;
+		padding-bottom: 32px;
+		&__list {
+			gap: 66px;
+		}
+		.cart {
+			gap: 40px;
+			img {
+				width: 22px;
+				height: 22px;
+			}
+		}
+	}
 }
