--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,12 @@
 @import 'reset';
 @import 'assets/fonts/fonts';
 @import 'var';
+* {
+	font-size: 25px;
+	font-family: 'Gilroy', sans-serif;
+	color: #000;
+	font-weight: 500;
+}
 body {
 	height: 100%;
 	scroll-behavior: smooth;
@@ -12,9 +18,6 @@ html {
 	height: max-content;
 }
 body {
-	font-family: 'Gilroy', sans-serif;
-	font-weight: 500;
-	color: #000;
 	overflow-x: hidden;
 }
 #root {
@@ -33,15 +36,80 @@ section {
 	scroll-margin-top: 170px;
 }
 
-.testzone {
-	margin: 0 auto;
-	// border: 1px solid black;
-}
-
-.modal {
-	font-size: 12px;
-}
-
 .remove-decor::before {
 	content: none !important;
+}
+
+// @media (max-width: 1690px) {
+// 	.container {
+// 		width: calc(1180px + 30px);
+// 		margin: 0 auto;
+// 		padding: 0 15px;
+// 	}
+// }
+
+// @media screen and (max-width: 1210px) {
+// 	.container {
+// 		width: calc(1180px + 30px);
+// 	}
+// }
+// @media screen and (max-width: 375px) {
+// 	.container {
+// 		width: 100%;
+// 		padding: 0 15px;
+// 	}
+// }
+
+// @media (max-width: 1190px) {
+// 	.container {
+// 		width: 960px;
+// 	}
+// }
+// @media (max-width: 991px) {
+// 	.container {
+// 		width: 720px;
+// 	}
+// }
+// @media (max-width: 768px) {
+// 	.container {
+// 		width: 100%;
+// 		padding: 0 18px;
+// 	}
+// }
+// @media (max-width: 375px) {
+// 	.container {
+// 		width: 100%;
+// 		padding: 0 18px;
+// 	}
+// }
+@media (max-width: 1904px) {
+	.container {
+		width: 1690px;
+	}
+}
+@media (max-width: 1691px) {
+	* {
+		font-size: 18px;
+	}
+	.container {
+		width: 1210px;
+	}
+}
+@media (max-width: 1211px) {
+	.container {
+		width: 768px;
+		padding: 0 35px;
+	}
+}
+@media (max-width: 769px) {
+	.container {
+		width: 100%;
+		padding: 0 18px;
+	}
+}
+@media (max-width: 375px) {
+	.container {
+		width: 100%;
+		padding: 0 18px;
+	}
 }
